--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -465,7 +465,7 @@ jobs:
           source ${INSTALL_DIR}/setupvars.sh
           
           # Conformance utilizes all the cores resulting in Docker daemon crash
-          cpus_to_use=${{ steps.cpu-cores.outputs.count }}-4
+          cpus_to_use=$(( ${{ steps.cpu-cores.outputs.count }}-4 ))
           
           python3 ${CONFORMANCE_TOOLS_DIR}/run_conformance.py -ov=${INSTALL_DIR}/tests \
             -j=$cpus_to_use \
