--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -932,14 +932,16 @@ jobs:
 
       - name: Install PyTorch tests requirements
         run: |
-          export CPLUS_INCLUDE_PATH=${Python_ROOT_DIR}/include/python3.11
-          echo $AGENT_TOOLSDIRECTORY
+          # export CPLUS_INCLUDE_PATH=${Python_ROOT_DIR}/include/python3.11
           python3 -m pip install -r ${MODEL_HUB_TESTS_INSTALL_DIR}/torch_tests/requirements.txt
           python3 -m pip install -r ${MODEL_HUB_TESTS_INSTALL_DIR}/torch_tests/requirements_secondary.txt
-          python3 -m pip cache purge
+          # python3 -m pip cache purge
           echo "Available storage:"
           df -h
-          du -h -d0 ~/.cache ~/*
+          du -h -d0 ${PIP_CACHE_DIR} ~/*
+        env:
+          CPLUS_INCLUDE_PATH: ${{ env.Python_ROOT_DIR }}/include/python3.11
+
 
       - name: PyTorch Models Tests
         run: |
