--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -938,7 +938,7 @@ jobs:
           # python3 -m pip cache purge
           echo "Available storage:"
           df -h
-          du -h -d0 ${PIP_CACHE_DIR} ~/*
+          du -h -d0 ${PIP_CACHE_DIR} ${HOME}/*
         env:
           CPLUS_INCLUDE_PATH: ${{ env.Python_ROOT_DIR }}/include/python3.11
 
