--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -432,7 +432,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
+          sudo -E ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
           
           # Needed for downloading IRs from storage.openvinotoolkit with Python urllib
           sudo apt-get update && apt-get install -y ca-certificates
