--- a/.ci/azure/linux_debian.yml
+++ b/.ci/azure/linux_debian.yml
@@ -150,7 +150,7 @@ jobs:
         -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
         -DENABLE_PYTHON=ON
         -DENABLE_INTEL_GNA=OFF
-        -DPYTHON_EXECUTABLE=$(BUILD_VENV)/bin/python3
+        -DPython3_EXECUTABLE=$(BUILD_VENV)/bin/python3
         -DENABLE_TESTS=ON
         -DENABLE_FASTER_BUILD=ON
         -DENABLE_STRICT_DEPENDENCIES=OFF
