--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -956,7 +956,7 @@ jobs:
         run: |
           # libssl1.1 - 'python3 -m pip' in self-hosted runner
           sudo apt install --assume-yes --no-install-recommends libssl1.1
-          # install git (requeried to build pip deps from the sources)
+          # install git (required to build pip deps from the sources)
           # install 'g++' to build 'detectron2' and 'natten' wheels
           sudo apt-get install --assume-yes --no-install-recommends g++ git ca-certificates
 
