fixed logs upload condition

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -368,7 +368,7 @@ jobs:
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
-        if: ${{ always() }}
+        if: ${{ always() && !cancelled()}}
         with:
           name: test-results-cpp
           path: ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
@@ -561,7 +561,7 @@ jobs:
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
-        if: ${{ always() }}
+        if: ${{ always() && !cancelled()}}
         with:
           name: test-results-cpp
           path: ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
@@ -575,6 +575,8 @@ jobs:
     runs-on: aks-linux-4-cores
     container:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
+      volumes:
+        - /mount/caches:/mount/caches
     env:
       OPENVINO_REPO: /__w/openvino/openvino/openvino
       INSTALL_DIR: /__w/openvino/openvino/install
@@ -776,7 +778,7 @@ jobs:
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
-        if: ${{ always() }}
+        if: ${{ always() && !cancelled()}}
         with:
           name: test-results-python
           path: |
@@ -936,7 +938,7 @@ jobs:
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
-        if: ${{ always() }}
+        if: ${{ always() && !cancelled()}}
         with:
           name: test-results-tensorflow-hub-models
           path: |
@@ -1041,7 +1043,7 @@ jobs:
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
-        if: ${{ always() }}
+        if: ${{ always() && !cancelled()}}
         with:
           name: test-results-torch-models
           path: |
