--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -98,8 +98,8 @@ jobs:
 
       - name: Set pip cache path
         run: |
-          export PIP_VER = $(python3 -m pip --version | grep -o '[0-9]*[.][0-9]*[.][0-9]*')
-          echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/${PIP_VER} >> $GITHUB_ENV
+          export PIP_VER=$(python3 -m pip --version | grep -o '[0-9]*[.][0-9]*[.][0-9]*')
+          echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/${PIP_VER}" >> $GITHUB_ENV
 
       - name: Install python dependencies
         run: |
